--- a/src/partials/_buttons.scss
+++ b/src/partials/_buttons.scss
@@ -4,15 +4,10 @@
   color: white;
   background-color: black;
   border: 1px solid black;
-  padding: 10px 20px;
+  padding: 20px 30px;
+  margin-right: 20px;
   cursor: pointer;
   display: inline-block;
-
-  &:hover {
-    color: black;
-    background-color: transparent;
-    border: 1px solid white;
-  }
 }
 
 .btn-empty {
@@ -20,13 +15,7 @@
   font-weight: bold;
   color: black;
   border: 1px solid white;
-  padding: 10px 20px;
+  padding: 20px 30px;
   cursor: pointer;
   display: inline-block;
-
-  &:hover {
-    color: white;
-    background-color: black;
-    border: 1px solid black;
-  }
 }
