--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import "partials/variables";
 @import "partials/mixins";
 @import "partials/buttons";
 @import "partials/common";
 @import "partials/header";
 @import "partials/navbar";
+@import "partials/dropdown";
 @import "partials/jumbotron";
 @import "partials/footer";
